// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-memora destination: upsertProfile action - all fields 1`] = `
Object {
  "columnMappings": Array [
    Object {
      "columnName": "email",
      "traitGroup": "Contact",
      "traitName": "email",
    },
    Object {
      "columnName": "firstName",
      "traitGroup": "Contact",
      "traitName": "firstName",
    },
    Object {
      "columnName": "lastName",
      "traitGroup": "Contact",
      "traitName": "lastName",
    },
  ],
  "fileSize": 51,
  "filename": "memora-import-1768555612079.csv",
}
`;

exports[`Testing snapshot for actions-memora destination: upsertProfile action - required fields 1`] = `
Object {
  "columnMappings": Array [
    Object {
      "columnName": "email",
      "traitGroup": "Contact",
      "traitName": "email",
    },
  ],
  "fileSize": 22,
  "filename": "memora-import-1768555612067.csv",
}
`;
